# ml-api

./: Dockerfile  LICENSE.md  README.md  pyproject.toml
app/: constants.py  main.py
app/models/: gpt2.py  gpt2_endpoint.py
app/routers/: gpt2.py
app/schemas/: payload.py
terraform/: main.tf  variables.tf  versions.tf
terraform/modules/model_endpoint/: main.tf  outputs.tf  variables.tf
